deploy/ingress-nginx/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: "ingress-nginx"
    app.kubernetes.io/component: "controller"
  annotations:
    app.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
